Created the CurrentLocation activity (class and UI) to get the location permission configured!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,5 +70,7 @@
     <string name="multi_factor_signed_out">You are not signed in. To use this sample, first navigate to the Email/Password example to sign in and then return here to enroll in multi-factor auth.</string>
     <string name="landing_page">Landing Page</string>
     <string name="title_activity_maps">Map</string>
+    <string name="location">Location</string>
+    <string name="get_location">Get Location</string>
 
 </resources>
