Attached the CurrentLocation activity to the main project. Tyson and Edward please test my implementation to verify the "location permission" is working properly!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,5 +72,6 @@
     <string name="title_activity_maps">Map</string>
     <string name="location">Location</string>
     <string name="get_location">Get Location</string>
+    <string name="geofence">Geofence</string>
 
 </resources>
