Google Maps API is now working and shows "Sydney Australia" by default. Had to change the API key and limit the keys restrictions!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,5 +73,6 @@
     <string name="location">Location</string>
     <string name="get_location">Get Location</string>
     <string name="geofence">Geofence</string>
+    <string name="title_activity_google_maps">Map</string>
 
 </resources>
