Modified CurrentLocation class to display the user's current location in a textview. Get Coordinates button displays GPS coordinates. Added GetAddressIntentService.java to handle location information displayed in textview. Added LocationAddressResultReceiver.java to be the interface when permission is accepted and the current user location is displayed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,9 +70,11 @@
     <string name="multi_factor_signed_out">You are not signed in. To use this sample, first navigate to the Email/Password example to sign in and then return here to enroll in multi-factor auth.</string>
     <string name="landing_page">Landing Page</string>
     <string name="title_activity_maps">Map</string>
-    <string name="location">Location</string>
+    <string name="location">Loading Location...</string>
     <string name="get_location">Get Location</string>
     <string name="geofence">Geofence</string>
     <string name="title_activity_google_maps">Map</string>
+    <string name="get_coordinates">Get Coordinates</string>
+    <string name="gps_location">GPS Location:</string>
 
 </resources>
