--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,5 +76,8 @@
     <string name="title_activity_google_maps">Map</string>
     <string name="get_coordinates">Get Coordinates</string>
     <string name="gps_location">GPS Location:</string>
+    <string name="button">Button</string>
+    <string name="name">Name:</string>
+    <string name="longtiude">Longtiude:</string>
 
 </resources>
