--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,7 +80,7 @@
     <string name="name">Name:</string>
     <string name="longtiude">Longtiude:</string>
     <string name="loading_current_location">Loading Current Location...</string>
-    <string name="show_exact_gps_coordinates">Show Exact GPS Coordinates:</string>
+    <string name="show_exact_gps_coordinates">GPS Coordinates:</string>
     <string name="current_location_bttn_txt">Current Location</string>
 
 </resources>
