--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,5 +82,11 @@
     <string name="loading_current_location">Loading Current Location...</string>
     <string name="show_exact_gps_coordinates">GPS Coordinates:</string>
     <string name="current_location_bttn_txt">Current Location</string>
+    <string name="title_activity_privacy_policy">PrivacyPolicyActivity</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">Hello Square World!</string>
 
 </resources>
